# stdio-mysql-mcp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/stdio_mysql_mcp/: server.py
